# analysis_mp_chaser

./: CMakeLists.txt  README.md  package.xml
data/: actor_trajectory_airsim_dual.txt  actor_trajectory_airsim_single.txt  actor_trajectory_exp_2d.txt  actor_trajectory_exp_3d.txt  actor_trajectory_simulator_2d.txt
launch/: airsim_dual.launch  airsim_dual_total.launch  airsim_single.launch  airsim_single_total.launch  los_keeper_2d.launch  los_keeper_2d_total.launch  los_keeper_3d.launch  los_keeper_3d_total.launch  los_keeper_exp_2d.launch  los_keeper_exp_2d_total.launch  los_keeper_exp_3d.launch  los_keeper_exp_3d_total.launch  mp_chaser_dual_exp.launch  mp_chaser_dual_exp_total.launch  mp_chaser_single_exp.launch  mp_chaser_single_exp_total.launch
log/: actor_trajectory_airsim_dual.txt  actor_trajectory_airsim_single.txt  actor_trajectory_exp_2d.txt  actor_trajectory_exp_3d.txt  actor_trajectory_exp_dual.txt  actor_trajectory_exp_single.txt  actor_trajectory_simulator_3d.txt  min_distance_2d_exp.txt  min_distance_2d_sim.txt  min_distance_3d_exp.txt  min_distance_3d_sim.txt  min_distance_dual_exp.txt  min_distance_dual_sim.txt  min_distance_single_exp.txt  min_distance_single_sim.txt  visibility_score_2d_exp.txt  visibility_score_2d_sim.txt  visibility_score_3d_exp.txt  visibility_score_3d_sim.txt  visibility_score_dual_exp.txt  visibility_score_dual_sim.txt  visibility_score_single_exp.txt  visibility_score_single_sim.txt
rviz_config/: dual.rviz  dual_total.rviz  exp_dual.rviz  exp_dual_total.rviz  exp_single.rviz  exp_single_total.rviz  los_keeper_2d.rviz  (+8 more)
(+6 files in other folders)
